--- a/src/main/webapp/app/entities/product/product-detail.component.html
+++ b/src/main/webapp/app/entities/product/product-detail.component.html
@@ -53,6 +53,10 @@
                         {{ product.imageContentType }}, {{ byteSize(product.image) }}
                     </div>
                 </dd>
+                <dt><span jhiTranslate="demoApp.product.user">User</span></dt>
+                <dd>
+                    {{ product.user?.login }}
+                </dd>
                 <dt><span jhiTranslate="demoApp.product.productCategory">Product Category</span></dt>
                 <dd>
                     <div *ngIf="product.productCategory">
