--- a/src/main/webapp/app/entities/cart-item/cart-item-update.component.html
+++ b/src/main/webapp/app/entities/cart-item/cart-item-update.component.html
@@ -42,7 +42,7 @@
                     <label class="form-control-label" jhiTranslate="demoApp.cartItem.product" for="field_product">Product</label>
                     <select class="form-control" id="field_product" name="product" formControlName="product">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="productOption.id === editForm.get('product')!.value?.id ? editForm.get('product')!.value : productOption" *ngFor="let productOption of products; trackBy: trackById">{{ productOption.id }}</option>
+                        <option [ngValue]="productOption.id === editForm.get('product')!.value?.id ? editForm.get('product')!.value : productOption" *ngFor="let productOption of products; trackBy: trackById">{{ productOption.name }}</option>
                     </select>
                 </div>
 
