--- a/src/main/webapp/app/entities/customer-details/customer-details-detail.component.html
+++ b/src/main/webapp/app/entities/customer-details/customer-details-detail.component.html
@@ -34,7 +34,7 @@
                 </dd>
                 <dt><span jhiTranslate="demoApp.customerDetails.user">User</span></dt>
                 <dd>
-                    {{ customerDetails.user?.id }}
+                    {{ customerDetails.user?.login }}
                 </dd>
             </dl>
 
