--- a/src/main/webapp/app/entities/customer-details/customer-details-update.component.html
+++ b/src/main/webapp/app/entities/customer-details/customer-details-update.component.html
@@ -83,7 +83,7 @@
                     <label class="form-control-label" jhiTranslate="demoApp.customerDetails.user" for="field_user">User</label>
                     <select class="form-control" id="field_user" name="user" formControlName="user">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="userOption.id === editForm.get('user')!.value?.id ? editForm.get('user')!.value : userOption" *ngFor="let userOption of users; trackBy: trackById">{{ userOption.id }}</option>
+                        <option [ngValue]="userOption.id === editForm.get('user')!.value?.id ? editForm.get('user')!.value : userOption" *ngFor="let userOption of users; trackBy: trackById">{{ userOption.login }}</option>
                     </select>
                 </div>
             </div>
