--- a/src/main/webapp/app/entities/product-order/product-order.component.html
+++ b/src/main/webapp/app/entities/product-order/product-order.component.html
@@ -21,15 +21,15 @@
     <div class="table-responsive" id="entities" *ngIf="productOrders && productOrders.length > 0">
         <table class="table table-striped" aria-describedby="page-heading">
             <thead>
-                <tr>
-                    <th scope="col" ><span jhiTranslate="global.field.id">ID</span></th>
-                    <th scope="col" ><span jhiTranslate="demoApp.productOrder.quantity">Quantity</span></th>
-                    <th scope="col" ><span jhiTranslate="demoApp.productOrder.totalPrice">Total Price</span></th>
-                    <th scope="col" ><span jhiTranslate="demoApp.productOrder.created">Created</span></th>
-                    <th scope="col" ><span jhiTranslate="demoApp.productOrder.address">Address</span></th>
-                    <th scope="col" ><span jhiTranslate="demoApp.productOrder.status">Status</span></th>
-                    <th scope="col" ><span jhiTranslate="demoApp.productOrder.product">Product</span></th>
-                    <th scope="col" ><span jhiTranslate="demoApp.productOrder.user">User</span></th>
+                <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="loadPage.bind(this)">
+                    <th scope="col"  jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="quantity"><span jhiTranslate="demoApp.productOrder.quantity">Quantity</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="totalPrice"><span jhiTranslate="demoApp.productOrder.totalPrice">Total Price</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="created"><span jhiTranslate="demoApp.productOrder.created">Created</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="address"><span jhiTranslate="demoApp.productOrder.address">Address</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="status"><span jhiTranslate="demoApp.productOrder.status">Status</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="product.name"><span jhiTranslate="demoApp.productOrder.product">Product</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="user.login"><span jhiTranslate="demoApp.productOrder.user">User</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -43,11 +43,11 @@
                     <td jhiTranslate="{{ 'demoApp.STATUS.' + productOrder.status }}">{{ productOrder.status }}</td>
                     <td>
                         <div *ngIf="productOrder.product">
-                            <a [routerLink]="['/product', productOrder.product?.id, 'view']" >{{ productOrder.product?.id }}</a>
+                            <a [routerLink]="['/product', productOrder.product?.id, 'view']" >{{ productOrder.product?.name }}</a>
                         </div>
                     </td>
                     <td>
-                        {{ productOrder.user?.id }}
+                        {{ productOrder.user?.login }}
                     </td>
                     <td class="text-right">
                         <div class="btn-group">
@@ -75,5 +75,15 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div *ngIf="productOrders && productOrders.length > 0">
+        <div class="row justify-content-center">
+            <jhi-item-count [page]="page" [total]="totalItems" [itemsPerPage]="itemsPerPage"></jhi-item-count>
+        </div>
+
+        <div class="row justify-content-center">
+            <ngb-pagination [collectionSize]="totalItems" [(page)]="ngbPaginationPage" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage($event)"></ngb-pagination>
+        </div>
     </div>
 </div>
