--- a/src/main/webapp/app/entities/product/product.component.html
+++ b/src/main/webapp/app/entities/product/product.component.html
@@ -33,8 +33,8 @@
                     <th scope="col"  jhiSortBy="type"><span jhiTranslate="demoApp.product.type">Type</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="validPeriod"><span jhiTranslate="demoApp.product.validPeriod">Valid Period</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"  jhiSortBy="image"><span jhiTranslate="demoApp.product.image">Image</span> <fa-icon icon="sort"></fa-icon></th>
-                    <th scope="col"  jhiSortBy="user.id"><span jhiTranslate="demoApp.product.user">User</span> <fa-icon icon="sort"></fa-icon></th>
-                    <th scope="col"  jhiSortBy="productCategory.id"><span jhiTranslate="demoApp.product.productCategory">Product Category</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="user.login"><span jhiTranslate="demoApp.product.user">User</span> <fa-icon icon="sort"></fa-icon></th>
+                    <th scope="col"  jhiSortBy="productCategory.name"><span jhiTranslate="demoApp.product.productCategory">Product Category</span> <fa-icon icon="sort"></fa-icon></th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -57,11 +57,11 @@
                         <span *ngIf="product.image">{{ product.imageContentType }}, {{ byteSize(product.image) }}</span>
                     </td>
                     <td>
-                        {{ product.user?.id }}
+                        {{ product.user?.login }}
                     </td>
                     <td>
                         <div *ngIf="product.productCategory">
-                            <a [routerLink]="['/product-category', product.productCategory?.id, 'view']" >{{ product.productCategory?.id }}</a>
+                            <a [routerLink]="['/product-category', product.productCategory?.id, 'view']" >{{ product.productCategory?.name }}</a>
                         </div>
                     </td>
                     <td class="text-right">
