--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,52 +1,38 @@
 <div>
+    <div [ngSwitch]="isAuthenticated()">
+        <div class="alert alert-success" *ngSwitchCase="true">
+            <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message"
+                [translateValues]="{ username: account.login }">You are logged in as user "{{ account.login }}".</span>
+        </div>
+        <div class="alert alert-warning" *ngSwitchCase="false">
+            <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
+            <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
+        </div>
+        <div class="alert alert-warning" *ngSwitchCase="false">
+            <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;
+            <a class="alert-link" routerLink="account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
+        </div>
+    </div>
     <div class="row">
-        <div class="col-md-3" *ngFor="let i of [1,2,3,4]">
+        <div class="col-md-3" style="padding-bottom: 10px;" *ngFor="let product of products;trackBy: trackId">
             <div class="row">
                 <div class="col-md-12">
-                    <img src="https://img.alicdn.com/imgextra/i2/2928278102/O1CN01s07YI229ilaocyUet_!!2928278102-0-sm.jpg_430x430q90.jpg" alt="" style="width: 100%;height:100%;">
+                    <!-- <img [src]="product.image" alt="" style="width: 100%;height:100%;">width: 100%;height:100%; -->
+                    <img [src]="'data:' + product.imageContentType + ';base64,' + product.image" style="width: 100%;height:100%;" alt="product image"/>
                 </div>
-                <div class="col-md-6" style="color: red;font-size: large;">¥30.00</div>
-                <div class="col-md-6" style="color: gray;font-size: small;display:flex;align-items: center;">阿里健康大药房</div>
-                <div class="col-md-12" style="font-size: small;">2盒装 999三九感冒灵颗粒冲剂咽痛头痛流鼻涕鼻塞药店感冒灵常备</div>
+                <div class="col-md-6" style="color: red;font-size: large;">¥{{product.price}}</div>
+                <div class="col-md-6" style="color: gray;font-size: small;display:flex;align-items: center;">{{product.manufacturer}}</div>
+                <div class="col-md-12" style="font-size: small;">{{product.name}}</div>
             </div>
         </div>
     </div>
-    
-        <h1 class="display-4" jhiTranslate="home.title">Welcome, Java Hipster!</h1>
-        <div *jhiHasAnyAuthority="'ROLE_MERCHANT'">This should appear.... when the VISITOR is NOT logged </div>
-
-        <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
-
-        <div [ngSwitch]="isAuthenticated()">
-            <div class="alert alert-success" *ngSwitchCase="true">
-                <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message"
-                    [translateValues]="{ username: account.login }">You are logged in as user "{{ account.login }}".</span>
-            </div>
-
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
-                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
-            </div>
-
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;
-                <a class="alert-link" routerLink="account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
-            </div>
+    <div *ngIf="products && products.length > 0">
+        <div class="row justify-content-center">
+            <jhi-item-count [page]="page" [total]="totalItems" [itemsPerPage]="itemsPerPage"></jhi-item-count>
         </div>
 
-        <p jhiTranslate="home.question">
-            If you have any question on JHipster:
-        </p>
-
-        <ul>
-            <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.homepage">JHipster homepage</a></li>
-            <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.stackoverflow">JHipster on Stack Overflow</a></li>
-            <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.bugtracker">JHipster bug tracker</a></li>
-            <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.chat">JHipster public chat room</a></li>
-            <li><a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.link.follow">follow @jhipster on Twitter</a></li>
-        </ul>
-
-        <p>
-            <span jhiTranslate="home.like">If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer" jhiTranslate="home.github">GitHub</a>!
-        </p>
+        <div class="row justify-content-center">
+            <ngb-pagination [collectionSize]="totalItems" [(page)]="ngbPaginationPage" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage($event)"></ngb-pagination>
+        </div>
+    </div>
 </div>
