Add shopping cart and search in home page

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -39,18 +39,18 @@
                             <span jhiTranslate="global.menu.entities.productCategory">Product Category</span>
                         </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="dropdown-item" routerLink="customer-details" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                             <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
                             <span jhiTranslate="global.menu.entities.customerDetails">Customer Details</span>
                         </a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                         <a class="dropdown-item" routerLink="shopping-cart" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                             <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
                             <span jhiTranslate="global.menu.entities.shoppingCart">Shopping Cart</span>
                         </a>
-                    </li>
+                    </li> -->
                     <li *jhiHasAnyAuthority="'ROLE_MERCHANT'">
                         <a class="dropdown-item" routerLink="product-order" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                             <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
@@ -63,18 +63,12 @@
                             <span jhiTranslate="global.menu.entities.advisory">Advisory</span>
                         </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="dropdown-item" routerLink="cart-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                             <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
                             <span jhiTranslate="global.menu.entities.cartItem">Cart Item</span>
                         </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" routerLink="product" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                            <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                            <span jhiTranslate="global.menu.entities.product">Product</span>
-                        </a>
-                    </li>
+                    </li> -->
                     <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                 </ul>
             </li>
@@ -176,10 +170,20 @@
                         </a>
                     </li>
                     <li *ngSwitchCase="true">
-                        <a *ngIf="account$ | async as account" class="dropdown-item" [routerLink]="['/account/customer-details',account.id]" routerLinkActive="active" (click)="collapseNavbar()">
-                            <fa-icon icon="lock" [fixedWidth]="true"></fa-icon>
-                            <span jhiTranslate="global.menu.account.password">Password</span>
-                        </a>
+                        <div *ngIf="account$ | async as account">
+                            <a class="dropdown-item" [routerLink]="['/account/customer-details',3]" routerLinkActive="active" (click)="collapseNavbar()">
+                                <fa-icon [icon]="faAddressBook" [fixedWidth]="true"></fa-icon>
+                                <span jhiTranslate="global.menu.account.customer-details">Customer Details</span>
+                            </a>
+                        </div>
+                    </li>
+                    <li *ngSwitchCase="true">
+                        <div *ngIf="account$ | async as account">
+                            <a class="dropdown-item" [routerLink]="['/account/shoppingCart']" routerLinkActive="active" (click)="collapseNavbar()">
+                                <fa-icon [icon]="faAddressBook" [fixedWidth]="true"></fa-icon>
+                                <span jhiTranslate="global.menu.account.shopping-cart">Shopping Cart</span>
+                            </a>
+                        </div>
                     </li>
                     <li *ngSwitchCase="true">
                         <a class="dropdown-item" (click)="logout()" id="logout">
