--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -14,11 +14,14 @@
             <a class="alert-link" routerLink="account/register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
         </div>
     </div>
+    <div style="width:400px;">
+        <input type="text" placeholder="Search.." style="padding:6px;font-size:17px;margin-top: 10px;margin-bottom: 10px;border-color: deepskyblue;" size="120" [(ngModel)]="search" (ngModelChange)="reSearch()">
+    </div>
     <div class="row">
         <div class="col-md-3" style="padding-bottom: 10px;" *ngFor="let product of products;trackBy: trackId">
             <div class="row" (click)="navigateToDetail(product)">
                 <div class="col-md-12">
-                    <!-- <img [src]="product.image" alt="" style="width: 100%;height:100%;">width: 100%;height:100%; -->
+                    <!-- <img src="https://img.alicdn.com/imgextra/i2/854073895/TB2xdjin8DH8KJjSspnXXbNAVXa_!!854073895.jpg" alt="" style="width: 100%;height:100%;"> -->
                     <img [src]="'data:' + product.imageContentType + ';base64,' + product.image" style="width: 100%;height:100%;" alt="product image"/>
                 </div>
                 <div class="col-md-6" style="color: red;font-size: large;">¥{{product.price}}</div>
